# emailanalizer

./: .gitignore  README.md  pyproject.toml
app/: app.py
conf/base/: catalog.yml  parameters_visualization.yml
data/01_raw/: spam_dataset.csv
notebooks/: 01_first-exploration.ipynb  02_data-exploration.ipynb  03_model-training.ipynb
src/emailanalyzer/: __init__.py  __main__.py  settings.py  utils.py
src/emailanalyzer/pipelines/data_processing/: nodes.py  pipeline.py
src/emailanalyzer/pipelines/data_science/: nodes.py  pipeline.py
src/emailanalyzer/pipelines/visualization/: __init__.py  nodes.py  pipeline.py
tests/pipelines/visualization/: test_pipeline.py
