[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "emailanalyzer"
readme = "README.md"
dynamic = [
    "version",
]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro[jupyter]~=1.2.0",
    "kedro-datasets[pandas,pandas-csvdataset,pandas-deltatabledataset,pandas-parquetdataset,polars-csvdataset,polars-parquetdataset]>=3.0",
    "kedro-viz>=6.7.0",
    "scikit-learn~=1.5.1",
    "seaborn~=0.12.1",
    "jupyter>=1.1.1",
    "ipykernel>=7.2.0",
    "pandas>=2.3.3",
    "matplotlib>=3.10.8",
    "cloudpickle>=3.1.2",
    "streamlit>=1.55.0",
]

[project.scripts]
emailanalyzer = "emailanalyzer.__main__:main"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "emailanalyzer.__version__"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[tool.kedro]
package_name = "emailanalyzer"
project_name = "emailanalyzer"
kedro_init_version = "1.2.0"
tools = "['None']"
example_pipeline = "True"
source_dir = "src"

[tool.kedro_telemetry]
project_id = "ce0d184a4d9f40aaa3e59d74a44842d3"
